--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -6,16 +6,16 @@
   Include: 
   - @all_ratings.each do |rating|
     = rating
-    = check_box_tag "ratings[#{rating}]"
+    = check_box_tag "ratings[#{rating}]", 1, @checked[rating]
   = submit_tag 'Refresh'
 
 
 %table#movies
   %thead
     %tr
-      %th{:class => set_hilight('title')}= link_to "Movie Title", movies_path(:sort => 'title')
+      %th{:class => set_hilight('title')}= link_to "Movie Title", movies_path(:sort => 'title', :ratings => params[:ratings])
       %th Rating
-      %th{:class => set_hilight('release')}= link_to "Release Date", movies_path(:sort => 'release')
+      %th{:class => set_hilight('release')}= link_to "Release Date", movies_path(:sort => 'release', :ratings => params[:ratings])
       %th More Info
   %tbody
     - @movies.each do |movie|
